Updates javase/jvm/runtime.md
Auto commit by GitBook Editor